--- a/NYC_energy.ipynb
+++ b/NYC_energy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3f80e735",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6386f5e8",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "439"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "3125b5eb",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "361"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,17 +299,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "5c0ca7dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "90.0"
+       "90"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,12 +317,12 @@
    "source": [
     "# How many jobs were created in businesses in Queens?\n",
     "jobs = df.dropna(subset=['Job created'])\n",
-    "jobs[jobs['City'] == 'Queens']['Job created'].sum()"
+    "int(jobs[jobs['City'] == 'Queens']['Job created'].sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "8a13c7f2",
    "metadata": {},
    "outputs": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "0ce6c62d",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
        "Text(0, 0.5, 'Jobs created')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "f687ad59",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "4dd7ded5",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "05f78de0",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_7/q2lzb96j67q_4byhw1438h1m0000gn/T/ipykernel_30943/220198945.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/_7/q2lzb96j67q_4byhw1438h1m0000gn/T/ipykernel_33027/220198945.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -670,7 +670,7 @@
        "Name: Effective Date, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "8c4e869e",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "Text(0, 0.5, 'Jobs created (cumulative)')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -718,14 +718,6 @@
     "plt.xlabel('Year')\n",
     "plt.ylabel('Jobs created (cumulative)')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6319b673",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
